ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity9/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity9/input.ts:1:3
  |
1 | 1 >>
  |   ^^

